# basic-vm

./: CMakeLists.txt  README.md
share/: basic_bytecode_generator.py  basic_test.bc  build_and_test.sh  create_builds.sh  minimal.bc
src/: CMakeLists.txt  driver.f90  iso_varying_string.f90  util.f90  vm.f90
